# network-protocol-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  ci.yml.save
automation/: build.sh  capture_analyze.py  run_tests.sh
dissector/: dissector_core.cpp  dissector_core.h  packet_analyzer.cpp
network-protocol-analyzer/: main.cpp
network-protocol-analyzer.xcodeproj/: project.pbxproj
network-protocol-analyzer.xcodeproj/xcuserdata/ayaanvashistha.xcuserdatad/xcschemes/: xcschememanagement.plist
simulator/: device.c  device.h  protocol.c  protocol.h
tests/: test_dissector.cpp  test_protocol.cpp  test_runner.cpp
